# Argos

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  FASE_D_RESOCONTO.md  GUIDA.md  PIANO_RECON_SOCIAL.md  PIANO_WHATSAPP.md  README.md  SETUP_CLOUD_DB_TENANT.md  TEST_PLAN.md  alembic.ini  docker-compose.dev.yml  install.bat  neon_db_url  pyproject.toml  start.bat  tmpcombo.html  tmptag_filter.html  update.bat
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_baseline_post_fase_2_schema_gestito_da_.py  0fb817660193_add_job_chat_messages_table_for_b_001_.py  1e9265f53339_extract_contact_fields_into_assets.py  4871eafb4d3c_add_qualifier_destroy_mode_to_tasks.py  5bca203147e9_site_memory_tenant_scoping_with_share_.py  634164fff206_add_site_intelligence_scraping_policies_.py  9fd74ad2acc6_threads_and_social_dm_log_point_to_.py  bab96507888e_add_email_accounts_telegram_bots_and_.py  dd9f4fc12f91_chat_conversations_for_operator_with_.py  fascicoli_v1_add_projects_project_users_project_files.py  fascicoli_v2_add_project_chat_messages.py  fogli_v1_add_collaborative_sheets.py  fogli_v2_add_sheet_users_acl.py  fogli_v3_add_project_chat_conversations.py  fogli_v4_add_tenant_role.py  portal_v1_add_portal_fill.py
app/: __init__.py  _runtime_db_override.py  auth.py  config.py  contact_cli.py  dashboard.py  db.py  db_cloud.py  deeplinks.py  export_csv.py  import_csv.py  jobs.py  main.py  markdown_render.py  messaging_suite.py  models.py  orchestrator.py  release_check.py  secrets_util.py  storage.py  templates.py
app/agent/: agent_mode_advisor.py  asset_dedup.py  asset_tags.py  blocked_domains.py  extraction_templates.py  http_fetcher.py  job_chat_commands.py  llm_providers.py  master_summary.py  mode_schemas.py  ollama.py  pagination_detector.py  prompts.py  run_reporter.py  runner.py  runner_audience_discovery.py  runner_auto_extract.py  runner_browseruse.py  runner_bulk_extract.py  runner_control.py  runner_outreach.py  runner_outreach_social.py  runner_outreach_whatsapp.py  runner_portal_fill.py  runner_qualifier.py  runner_recon_social.py  runner_responder.py  runner_site_explorer.py  site_profiler.py  site_recon.py  tag_expr.py  url_canonical.py  url_discovery_browser.py  url_inspector.py
app/channels/: base.py  email.py  telegram.py
app/fascicoli/: __init__.py  acl.py  db.py  embed.py  fs.py  index_jobs.py  ingest.py  rag.py  realtime.py  realtime_redis.py  share.py  sheets_db.py  sheets_export.py  sync.py  vision.py
app/routes/: _tenant_filter.py  accounts_email.py  accounts_llm_keys.py  accounts_messaging.py  admin.py  assets.py  auth.py  dbconfig.py  disk_usage.py  docs.py  fascicoli.py  fascicoli_sheets.py  fascicoli_sheets_ws.py  import_csv.py  inbox.py  jobs.py  operator.py  orchestrator.py  portal_recorder_state.py  results.py  settings.py  settings_whatsapp.py  site_memory.py  social_accounts.py  tasks.py  tools.py  update.py  workflows.py
app/runtime/: __init__.py  proactor.py
app/templates/: _asset_search_results.html  _audience_snapshot_table.html  _fascicolo_chat_assistant.html  _index_progress.html  _project_kebab.html  _sheet_kebab.html  _sheet_manage_assets.html  _tag_filter_widget.html  accounts_email.html  accounts_email_edit.html  accounts_llm_keys.html  accounts_llm_keys_edit.html  accounts_messaging.html  accounts_telegram_edit.html  asset_detail.html  asset_edit.html  asset_new.html  assets_duplicates.html  assets_list.html  (+47 more)
dev/: NEXT_STEPS.md  runner_outreach_social_template.py  staging_task_form_social.html  test_humanize.py  test_login_flow.py
docs/: ADMIN_GUIDE.md  USER_GUIDE.md  argos_fascicoli_design.md  argos_fogli_collaborativi_plan.md
resources/: database_instagram.csv
scripts/: CLIENT_INSTALL.md  README.md  backfill_contacts_to_assets.py  copy_data_to_neon.py  db.py  deploy_to_neon.ps1  encrypt_task_keys.py  install_client.ps1  migrate_legacy_to_edg.py  migrate_to_cloud.py  rebuild_report.py  restore_dev_from_neon.ps1  update_client.ps1  watchdog_workflow.py
static/: argos_loader.js  sheets.css  sheets.js  sheets_manage.js  style.css
tests/: conftest.py  test_asset_dedup.py  test_asset_search_tenant.py  test_audience_snapshot.py  test_auth_admin.py  test_author_filter.py  test_backfill_contacts.py  test_contact_cli.py  test_db_safety_guard.py  test_dbconfig.py  test_export_csv.py  test_fascicoli_chat_context.py  test_fascicoli_chat_conversations.py  test_fascicoli_file_open.py  test_fascicoli_share.py  test_job_chat.py  test_operator_role.py  test_orchestrator_update_task.py  test_outreach_whatsapp_live.py  test_portal_fill.py  test_portal_fill_ui.py  test_proactor.py  test_published_agents.py  test_qualified_view.py  test_realtime.py  test_realtime_redis.py  test_recon_resume.py  test_secrets_encryption.py  test_sheets.py  test_sheets_export.py  test_sheets_routes.py  test_sheets_sharing.py  test_sheets_ws.py  test_smoke.py  test_social_accounts_owner.py  test_tag_expr.py  test_tenant_isolation.py  test_user_first_last_name.py  test_workflow_integration.py
(+80 files in other folders)
