[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscraper"
version = "0.1.0"
description = "Local web app per scraper agentici basati su Ollama"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "ddgs>=6.0",
  "readability-lxml>=0.8.1",
  "lxml>=5.2",
  "selectolax>=0.3.21",
  "apscheduler>=3.10",
  "playwright>=1.46",
  "browser-use>=0.1.40",
  "openai>=1.40",
  "aiosmtplib>=3.0",
  "imap-tools>=1.5",
  "pypdf>=4.0",
  # Anti-bot: TLS fingerprint impersonation per bypassare Cloudflare base/medio
  "curl_cffi>=0.15",
  # Anti-detection per Playwright (usato in url_discovery_browser + outreach social)
  "playwright-stealth>=2.0",
  # Anti-detection avanzato: Patchright e' un fork patched di Playwright con
  # ulteriori contromisure contro fingerprint detection. Usato dall'outreach
  # social per Instagram/TikTok dove i marker standard di automazione vengono
  # rilevati (vedi app/agent/social/).
  "patchright>=1.59",
  # Cifratura credenziali social account (Fernet symmetric encryption) salvate
  # in DB. Chiave master in .env (AGENTSCRAPER_SECRET).
  "cryptography>=43.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
agentscraper = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
