[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Rebrand 2026-05-21: AgentScraper → Argos ("i cento occhi sui tuoi lead").
# Il pkg name "argos" e' gia' preso su PyPI (HDF5 data inspector) — qui usiamo
# "argos-edg" per un eventuale publish; per `pip install -e .` locale e' indifferente.
name = "argos-edg"
version = "1.1.0"
description = "Argos — multi-agent intelligence system per lead discovery & outreach (Etna Digital Growth)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "ddgs>=6.0",
  "readability-lxml>=0.8.1",
  "lxml>=5.2",
  "selectolax>=0.3.21",
  "apscheduler>=3.10",
  "playwright>=1.46",
  "browser-use>=0.1.40",
  "openai>=1.40",
  "aiosmtplib>=3.0",
  "imap-tools>=1.5",
  "pypdf>=4.0",
  # PDF fallback testuale (per file dove pypdf estrae poco/nulla, capita spesso
  # su PDF generati da gestionali italiani con encoding strani).
  "pdfplumber>=0.11",
  # Rendering pagine PDF -> immagini per OCR via Vision LLM (Ollama llava /
  # qwen2.5-vl / llama3.2-vision). Niente Poppler native install, binary
  # incluso nel wheel pypdfium2 (Windows-friendly).
  "pypdfium2>=4.30",
  # Anti-bot: TLS fingerprint impersonation per bypassare Cloudflare base/medio
  "curl_cffi>=0.15",
  # Anti-detection per Playwright (usato in url_discovery_browser + outreach social)
  "playwright-stealth>=2.0",
  # Anti-detection avanzato: Patchright e' un fork patched di Playwright con
  # ulteriori contromisure contro fingerprint detection. Usato dall'outreach
  # social per Instagram/TikTok dove i marker standard di automazione vengono
  # rilevati (vedi app/agent/social/).
  "patchright>=1.59",
  # Cifratura credenziali social account (Fernet symmetric encryption) salvate
  # in DB. Chiave master in .env (ARGOS_SECRET, con fallback AGENTSCRAPER_SECRET).
  "cryptography>=43.0",
  # Multi-tenant cloud DB (vedi SETUP_CLOUD_DB_TENANT.md). Driver Postgres sync
  # con pool, password hashing per il login (bcrypt direct, no passlib),
  # firmatura cookie session.
  "psycopg[binary,pool]>=3.2",
  "bcrypt>=4.0",
  "itsdangerous>=2.2",
  # Schema migrations (vedi SETUP_CLOUD_DB_TENANT.md sezione "Schema migrations").
  # init_db idempotente gestisce gli ADD COLUMN; Alembic gestisce rename/drop/data.
  "alembic>=1.13",
  # Rendering markdown server-side per il file viewer (.md report dei task).
  # html=False blocca tag inline → sanitization by construction, no bleach.
  "markdown-it-py>=3.0",
  "mdit-py-plugins>=0.4",
  # Bus realtime OPZIONALE per i Fogli collaborativi multi-worker (vedi
  # docs/argos_fogli_collaborativi_plan.md). Include redis.asyncio; non e'
  # richiesto in single-worker (REDIS_URL vuoto -> non importato).
  "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
argos = "app.main:run"
agentscraper = "app.main:run"  # alias legacy retrocompat con installazioni esistenti

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
